Trailing commas cleanup

--- a/docs/sql/sfmc-sql-conversion-functions.mdx
+++ b/docs/sql/sfmc-sql-conversion-functions.mdx
@@ -174,7 +174,7 @@ Use it by adding the style code as the third argument of the [`CONVERT`](#conver
 
 ```sql
 SELECT
-      CONVERT(NVARCHAR, GETDATE(), 101)              AS DateAsString,
+      CONVERT(NVARCHAR, GETDATE(), 101)              AS DateAsString
     , CONVERT(DATETIME2, '2020-12-31 19:00:00', 120) AS StringAsDate
 ```
 
