Draft of Behavioral Triggers Debugging update

--- a/docs/config/sfmc-config-behavioral-triggers.mdx
+++ b/docs/config/sfmc-config-behavioral-triggers.mdx
@@ -1141,3 +1141,11 @@ Response structure is the same as for Abandoned Wishlist.
 
 </TabItem>
 </Tabs>
+
+## Debugging Behavioral Triggers
+
+During Behavioral Trigger implementation there are at least three key phases when you might need to debug your solution. And as you will be merging multiple systems and working on time-bound data using still fresh feature, possibility to look behind the curtain will be crucial. Thankfully, there is few options that we can use.
+
+### Debugging Collect.js
+
+First thing to check is your Collect.js implementation.
